<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/dp_24"
    tools:ignore="missingConstraints">

    <TextView
        android:id="@+id/title"
        style="@style/Heading2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/filters_menu_title"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:tint="@color/icon_tint" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/allItems"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_all_items"
        app:drawableStartCompat="@drawable/ic_list"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/favourites"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_favourites"
        app:drawableStartCompat="@drawable/ic_star"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/allItems" />

    <TextView
        android:id="@+id/recentlyModified"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_recently_modified"
        app:drawableStartCompat="@drawable/ic_clock"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/favourites" />

    <TextView
        android:id="@+id/sharedWithMe"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_shared_with_me"
        app:drawableStartCompat="@drawable/ic_share"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/recentlyModified" />

    <TextView
        android:id="@+id/ownedByMe"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_owned_by_me"
        app:drawableStartCompat="@drawable/ic_person"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/sharedWithMe" />

    <TextView
        android:id="@+id/expiry"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_expiry"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_calendar_clock"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/ownedByMe" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/expiry" />

    <TextView
        android:id="@+id/folders"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_folders"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_folder"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/tags"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_tags"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_tag"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/folders" />

    <TextView
        android:id="@+id/groups"
        style="@style/PasswordMenuItem"
        android:drawablePadding="@dimen/dp_16"
        android:text="@string/filters_menu_groups"
        app:drawableStartCompat="@drawable/ic_group"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintTop_toBottomOf="@+id/tags" />

</androidx.constraintlayout.widget.ConstraintLayout>
